[tool.poetry]
name = "s3-test"
version = "0.1.0"
description = ""
authors = ["Starobogatov Alexey <Starobogatov.a@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiobotocore = {extras = ["boto3"], version = "^2.13.2"}
pydantic-settings = "^2.4.0"
fastapi = {extras = ["all"], version = "^0.112.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
